commit 2 veggie page

--- a/recipe-app/.env
+++ b/recipe-app/.env
@@ -1,2 +1,13 @@
 # REACT_APP_API_KEY=db03b34d48e14786b2250a6e62bbfc35
-React_App_Api_Key=749f951320d342829c2c2035ef1520fd
+VITE_API_KEY=749f951320d342829c2c2035ef1520fd
+
+
+
+# const getPopular = async () => {
+#     const apiKey = "db03b34d48e14786b2250a6e62bbfc35";
+#     const api = await fetch(
+#       `https://api.spoonacular.com/recipes/random?apiKey=${apiKey}&number=9`
+#     );
+#     const data = await api.json();
+#     setPopular(data.recipes);
+#   };
