--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
+    "dotenv": "^16.1.1",
     "framer-motion": "^10.12.16",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
